--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "reactive-html",
   "version": "1.0.0",
   "description": "Simple reactive components to create complex UI",
-  "main": "/c/škola/Maturita/DlouhodobaMaturitniPrace/npmReactiveHTML/ReactiveHTML.min.js",
+  "main": "src/ReactiveHTML.min.js",
   "scripts": {
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "\u0016\u0016https://github.com/ujikCz/ReactiveHTML"
+    "url": "https://github.com/ujikCz/ReactiveHTML"
   },
   "keywords": [
     "reactive",
