--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "reactive-html",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Simple reactive Virtual DOM elements for building complex reactive UI",
   "main": "src/ReactiveHTML.min.js",
   "scripts": {
-    "test": "test"
+    "test": ""
   },
   "repository": {
     "type": "git",
