--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "reactive-html",
-  "version": "1.1.0",
+  "name": "reactivehtml",
+  "version": "1.1.7",
   "description": "Simple reactive Virtual DOM elements for building complex reactive UI",
-  "main": "src/ReactiveHTML.min.js",
+  "main": "ReactiveHTML.js",
   "scripts": {
-    "test": ""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ujikCz/ReactiveHTML"
+    "url": "https://github.com/ujikCz/ReactiveHTML.git"
   },
   "keywords": [
-    "reactive",
-    "HTML",
-    "JS",
     "virtual",
-    "DOM"
+    "node",
+    "reactive",
+    "UI",
+    "observe",
+    "javascript",
+    "html"
   ],
   "author": "Ludvik Prokopec <ludvik.prokopec@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ujikCz/ReactiveHTML/issues"
+  },
+  "homepage": "https://github.com/ujikCz/ReactiveHTML#readme"
 }
