--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "reactivehtml",
-  "version": "1.2.1",
+  "name": "@ujik/reactive-html",
+  "version": "2.1.3",
   "description": "Simple reactive Virtual DOM elements for building complex reactive UI",
-  "main": "ReactiveHTML.js",
+  "main": "ReactiveHTML.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ujikCz/ReactiveHTML.git"
+    "url": "https://github.com/ujikCz/ReactiveHTML"
   },
   "keywords": [
-    "virtual",
-    "node",
     "reactive",
-    "UI",
-    "observe",
-    "javascript",
-    "html",
-    "front-end",
-    "web"
+    "HTML",
+    "JS",
+    "virtual",
+    "DOM",
+    "React",
+    "htm"
   ],
   "author": "Ludvik Prokopec <ludvik.prokopec@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ujikCz/ReactiveHTML/issues"
-  },
-  "homepage": "https://github.com/ujikCz/ReactiveHTML#readme"
+  "license": "MIT"
 }
